# or-dispersion-analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml
LC Geography/: highway_144+101.csv
Road Coordinates/: highway_144.csv
Tools/: download_map.py  extract_roads.py
src/: app.py  data_engine.py  dispersion_backend.py  dispersion_ui.py  main.py  plotting.py  statistics_backend.py
