[project]
name = "or-dispersion-analysis"
version = "0.1.0"
description = "Python script to analyze and plot OpenRocket Monte-Carlo Simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
